WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304911
SVG filter referencing element with huge stroke fails to display
https://bugs.webkit.org/show_bug.cgi?id=304911
Summary
SVG filter referencing element with huge stroke fails to display
Simon Fraser (smfr)
Reported
2026-01-04 11:42:44 PST
Created
attachment 477899
[details]
Test The attachment shows a bug where a filter referencing an SVG element with a huge stroke fails to display. The same SVG stand-alone displays fine. Works: ``` <line x1="-50%" x2="150%" transform="rotate(45)" stroke="blue" stroke-width="300%" stroke-dasharray="15%"></line> ``` Fails: ``` <line x1="-50%" x2="150%" transform="rotate(45)" stroke="blue" stroke-width="100%" stroke-dasharray="15%"></line> ``` Even when the blue dashes show, the red rectangle has the wrong size.
Attachments
Test
(1.52 KB, text/html)
2026-01-04 11:42 PST
,
Simon Fraser (smfr)
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2026-01-04 12:02:19 PST
This happens because the input image to the `<feImage>` becomes huge, and we start scaling down incorrectly.
Radar WebKit Bug Importer
Comment 2
2026-01-04 12:02:36 PST
<
rdar://problem/167516452
>
Simon Fraser (smfr)
Comment 3
2026-01-05 11:34:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56096
EWS
Comment 4
2026-01-05 17:48:04 PST
Committed
305136@main
(c08dafc2c51a): <
https://commits.webkit.org/305136@main
> Reviewed commits have been landed. Closing PR #56096 and removing active labels.
Ahmad Saleem
Comment 5
2026-04-10 13:03:11 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/59111
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug