SVG filter referencing element with huge stroke fails to display https://bugs.webkit.org/show_bug.cgi?id=304911 rdar://167516452

Reviewed by Mike Wyrzykowski.

The input buffer to feImage may be scaled if it exceeds the 4kx4k threshold; this happened in the reported
case because of a line with a huge stroke. When this happens, the logic in `FEImageSoftwareApplier::apply()`
fails to take the buffer scaling into account, rendering just part of the buffer in the wrong location,
so fix the logic to handle scaling.

Tests: imported/w3c/web-platform-tests/css/filter-effects/feimage-element-ref-geometry-ref.html
       imported/w3c/web-platform-tests/css/filter-effects/feimage-element-ref-geometry.html

* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/feimage-element-ref-geometry-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/feimage-element-ref-geometry-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/filter-effects/feimage-element-ref-geometry.html: Added.
* Source/WebCore/platform/graphics/filters/software/FEImageSoftwareApplier.cpp:
(WebCore::FEImageSoftwareApplier::apply const):
* Source/WebCore/rendering/CSSFilterRenderer.cpp:
(WebCore::CSSFilterRenderer::apply):
* Source/WebCore/svg/graphics/filters/SVGFilterRenderer.cpp:
(WebCore::SVGFilterRenderer::apply):

Canonical link: https://commits.webkit.org/305136@main